# cos-ai-pdf-rag

./: .env.example  .gitignore  LEARNING.md  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  run_api.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: __init__.py
src/api/: config.py  database.py  dependencies.py  main.py  models.py  ui.py
src/api/routers/: health.py  models.py  pdfs.py  query.py
src/api/services/: pdf_service.py  rag_service.py
src/core/: __init__.py  document.py  embeddings.py  llm.py  rag.py
