[project]
name = "cosmos-ai-pdf-rag"
version = "0.1.0"
description = "FastAPI learning clone of ollama_pdf_rag — PDF upload → chunk → embed → query"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ollama>=0.6.0",
    "langchain==1.0.0",
    "langchain-core>=1.0.0",
    "langchain-ollama==1.0.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters==1.0.0",
    "langchain-classic==1.0.0",
    "langchain-chroma>=0.2.0",
    "unstructured[all-docs]>=0.16.12",
    "onnx>=1.17.0",
    "protobuf>=5.29.5",
    "chromadb>=0.4.22",
    "numpy==1.26.4",
    "pydantic==2.10.4",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov==4.1.0",
]

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
